--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "pipele",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -23,14 +24,17 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"rollup-plugin-polyfill-node": "^0.10.1",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"typescript": "^4.7.4",
 		"vite": "^2.9.13"
 	},
-	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
-		"cookie": "^0.4.1"
+		"@walletconnect/web3-provider": "^1.7.8",
+		"@web3auth/web3auth": "^1.1.0",
+		"cookie": "^0.4.1",
+		"ethers": "^5.6.9",
+		"web3modal": "^1.9.8"
 	}
 }
