--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"@web3auth/web3auth": "^1.1.0",
 		"cookie": "^0.4.1",
 		"ethers": "^5.6.9",
+		"lit-js-sdk": "^1.1.197",
+		"web3.storage": "^4.3.0",
 		"web3modal": "^1.9.8"
 	}
 }
