--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"vite": "^2.9.13"
 	},
 	"dependencies": {
+		"@fleekhq/fleek-storage-js": "^1.0.21",
+		"@spacehq/sdk": "^0.0.30",
 		"@walletconnect/web3-provider": "^1.7.8",
 		"@web3auth/web3auth": "^1.1.0",
 		"cookie": "^0.4.1",
