--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@web3auth/web3auth": "^1.1.0",
 		"cookie": "^0.4.1",
 		"ethers": "^5.6.9",
+		"js-waku": "^0.24.0",
 		"lit-js-sdk": "^1.1.197",
 		"web3.storage": "^4.3.0",
 		"web3modal": "^1.9.8"
