--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.372",
 		"@types/cookie": "^0.5.1",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -34,6 +34,7 @@
 		"vite": "^2.9.13"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.6.9",
 		"@fleekhq/fleek-storage-js": "^1.0.21",
 		"@spacehq/sdk": "^0.0.30",
 		"@sveltejs/adapter-static": "^1.0.0-next.37",
@@ -42,6 +43,7 @@
 		"@web3auth/web3auth": "^1.1.0",
 		"cookie": "^0.4.1",
 		"ethers": "^5.6.9",
+		"graphql": "^16.5.0",
 		"js-waku": "^0.24.0",
 		"lit-js-sdk": "^1.1.197",
 		"web3.storage": "^4.3.0",
