--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 		"@tableland/sdk": "^2.0.2",
 		"@walletconnect/web3-provider": "^1.7.8",
 		"@web3auth/web3auth": "^1.1.0",
+		"@xmtp/xmtp-js": "^5.0.0",
+		"axios": "^0.27.2",
 		"cookie": "^0.4.1",
 		"ethers": "^5.6.9",
 		"graphql": "^16.5.0",
