--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
 	"name": "pipele",
 	"version": "0.0.1",
 	"type": "module",
-	"engines": {
-		"node": ">=16.9"
-	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -20,35 +17,29 @@
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "1.0.0-next.372",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.70",
+		"@sveltejs/adapter-static": "^1.0.0-next.38",
+		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint": "^8.20.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"rollup-plugin-polyfill-node": "^0.10.1",
+		"rollup-plugin-polyfill-node": "^0.10.2",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"typescript": "^4.7.4",
-		"vite": "^2.9.10"
+		"vite": "^3.0.0"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.6.9",
 		"@fleekhq/fleek-storage-js": "^1.0.22",
-		"@spacehq/sdk": "^0.0.30",
-		"@sveltejs/adapter-static": "^1.0.0-next.37",
 		"@tableland/sdk": "^2.0.2",
-		"@walletconnect/web3-provider": "^1.7.8",
-		"@web3auth/web3auth": "^1.1.0",
-		"@xmtp/xmtp-js": "^5.0.0",
 		"axios": "^0.27.2",
-		"cookie": "^0.4.1",
+		"cookie": "^0.5.0",
 		"ethers": "^5.6.9",
 		"graphql": "^16.5.0",
-		"js-waku": "^0.24.0",
-		"lit-js-sdk": "^1.1.197",
-		"web3.storage": "^4.3.0",
-		"web3modal": "^1.9.8"
+		"lit-js-sdk": "^1.1.202",
+		"svelte-boring-avatars": "^1.2.2"
 	}
 }
