--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
+		"@sveltejs/adapter-vercel": "^3.0.1",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.70",
 		"@sveltejs/adapter-static": "^1.0.0-next.38",
